# calamares

./: CHANGES  CMakeLists.txt  settings.conf
CMakeModules/: CalamaresAddPlugin.cmake  FindPythonQt.cmake
lang/: calamares_id.ts
src/branding/default/: branding.desc
src/calamares/: testmain.cpp
src/libcalamares/: CMakeLists.txt  CalamaresConfig.h.in  GlobalStorage.cpp  GlobalStorage.h  JobQueue.cpp  PythonGettext.cpp  PythonGettext.h
src/libcalamares/PythonBoost/: PythonJob.cpp  PythonJobApi.cpp
src/libcalamares/PythonQt/: PythonQtJob.cpp  PythonQtJob.h  PythonQtUtils.cpp  PythonQtUtils.h  PythonQtUtilsWrapper.cpp  PythonQtUtilsWrapper.h
src/libcalamaresui/: CMakeLists.txt
src/libcalamaresui/modulesystem/: Module.cpp  Module.h  PythonJobModule.cpp  PythonQtViewModule.cpp  PythonQtViewModule.h
src/libcalamaresui/utils/: DebugWindow.cpp  PythonQtUtils.cpp  PythonQtUtils.h
src/libcalamaresui/viewpages/: PythonQtJob.cpp  PythonQtJob.h  PythonQtUtilsWrapper.cpp  PythonQtViewStep.cpp  PythonQtViewStep.h
src/modules/: CMakeLists.txt  README.md
src/modules/bootloader/: bootloader.conf
src/modules/dummypythonqt/: main.py
src/modules/finished/: finished.conf
src/modules/locale/: locale.conf
src/modules/os-freebsd/: CMakeLists.txt  FreeBSDJob.cpp  FreeBSDJob.h
src/modules/os-nixos/: main.py
src/modules/partition.v2/: CMakeLists.txt  PartitionViewStep.cpp  PartitionViewStep.h
src/modules/removeuser/: removeuser.conf
src/modules/unpackfs/: CMakeLists.txt  Tests.cpp  UnpackFSJob.cpp  UnpackFSJob.h  Workers.cpp  Workers.h  unpackfs.conf
(+2 files in other folders)
